v1.1
- Added cylindircal option to square lens
- Added aspheric option to square lens
- Fixed a label in square lens
- Removed smooth shading option from ccretro
- Fully mathematical custom normals for all lens and mirror variant, now default setting

v1.0
- First Version